force-app/main/default/objects/Community_Case_Creation_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_Enquiry_Type__c</fullName>
        <label>Case Enquiry Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiryType__c</fullName>
        <label>enquiryType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason_of_enquiry__c</fullName>
        <label>reason of enquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_category__c</fullName>
        <label>sub category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Community Case Creation Settings</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>NAME</columns>
        <columns>Case_Enquiry_Type__c</columns>
        <columns>category__c</columns>
        <columns>Channel__c</columns>
        <columns>enquiryType__c</columns>
        <columns>Origin__c</columns>
        <columns>reason_of_enquiry__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Status__c</columns>
        <columns>sub_category__c</columns>
        <columns>Tier__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
    </listViews>
</CustomObject>